# data_product_template

./: README.md
analytics/: pyproject.toml
backend/: pyproject.toml
data_pipeline/: pyproject.toml
machine_learning/: pyproject.toml
