[project]
name = "data-pipeline"
version = "0.1.0"
description = "Template for data ingestion, transformation, and workflow orchestration"
authors = [
    {name = "mandresyandri",email = "mandresy.andriantsoanavalona@gmail.com"}
]
license = {text = "Apache License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "boto3 (>=1.37.18,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
