[project]
name = "machine-learning"
version = "0.1.0"
description = "Template for building, training, and evaluating ML/DL models"
authors = [
    {name = "mandresyandri",email = "mandresy.andriantsoanavalona@gmail.com"}
]
license = {text = "Apache License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
